--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP+ZcgtOhm3Hqva1FojVuh3",
+      "authorship_tag": "ABX9TyNGsTA9yCMTBP8nZ5gZXSGI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,13 +118,37 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to find second largest element in an array."
+        "#Write a python program to find second largest element in an array.\n",
+        "array=[11,22,33,44,55,66,77,88]\n",
+        "max=array[0]\n",
+        "secondMax=array[0]\n",
+        "for i in array:\n",
+        "  if(i>max):\n",
+        "    max=i;\n",
+        "\n",
+        "for i in array:\n",
+        "  if(i<max and i>secondMax):\n",
+        "    secondMax=i\n",
+        "\n",
+        "print(secondMax)"
       ],
       "metadata": {
-        "id": "eulAhrqrzW1X"
+        "id": "eulAhrqrzW1X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2b1393a2-369b-40c3-d0aa-9c970d29eead"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "77\n"
+          ]
+        }
+      ]
     }
   ]
 }
