--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGsTA9yCMTBP8nZ5gZXSGI",
+      "authorship_tag": "ABX9TyM6dy5w8QqmbdUot39jNt8B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -146,6 +146,40 @@
           "name": "stdout",
           "text": [
             "77\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to count total number of even and odd elements in an array.\n",
+        "array=[11,22,33,44,55,66,77,88]\n",
+        "odd=0;\n",
+        "even=0;\n",
+        "for i in array:\n",
+        "  if(i%2==0):\n",
+        "    odd=odd+1\n",
+        "  else:\n",
+        "    even=even+1\n",
+        "print(\"Odd Count \"+str(odd))\n",
+        "print(\"Even Count \"+str(even))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pDt-n7FP2n8n",
+        "outputId": "1db62b25-ac5b-4e67-885e-0c41f306ec21"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Odd Count 4\n",
+            "Even Count 4\n"
           ]
         }
       ]
