--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM6dy5w8QqmbdUot39jNt8B",
+      "authorship_tag": "ABX9TyNPrPJ2Je3+sW1IIut9If8S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
-        "id": "hUgdSG3wwlEX"
+        "id": "hUgdSG3wwlEX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5c107517-f50d-4660-e705-445a8af819b3"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11\n",
+            "22\n",
+            "33\n",
+            "44\n",
+            "55\n",
+            "66\n",
+            "77\n",
+            "88\n"
+          ]
+        }
+      ],
       "source": [
-        "#Write a python program to read and print elements of array.\n",
+        "#Write a python program to read and print elements of array.(1)\n",
         "array=[11,22,33,44,55,66,77,88]\n",
         "for i in array:\n",
         "  print(i)"
@@ -45,22 +64,36 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to print all negative elements in an array.\n",
+        "#Write a python program to print all negative elements in an array.(2)\n",
         "array=[11,-22,33,-44,55,-66,77,88]\n",
         "for i in array:\n",
         "  if(i<0):\n",
         "    print(i)"
       ],
       "metadata": {
-        "id": "UlQylNxJxCt0"
+        "id": "UlQylNxJxCt0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "636db1db-f80b-41f5-989c-210296f39ea3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-22\n",
+            "-44\n",
+            "-66\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to find sum of all array elements.\n",
+        "#Write a python program to find sum of all array elements.(3)\n",
         "array=[11,22,33,44,55,66,77,88]\n",
         "sum=0\n",
         "for i in array:\n",
@@ -68,15 +101,27 @@
         "print(sum)"
       ],
       "metadata": {
-        "id": "XiaOc_0kxVpj"
+        "id": "XiaOc_0kxVpj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "79996796-9df0-498b-fab9-94d07b537310"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "396\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to find maximum and minimum element in an array.\n",
+        "#Write a python program to find maximum and minimum element in an array.(4)\n",
         "array=[11,22,33,44,55,66,77,88]\n",
         "max=array[0]\n",
         "min=array[0]\n",
@@ -89,15 +134,28 @@
         "print(min)"
       ],
       "metadata": {
-        "id": "AiiqNbqsx8Ky"
+        "id": "AiiqNbqsx8Ky",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab9e9238-acb4-4e1d-8b5c-05d7bdcab8f7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "88\n",
+            "11\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to search an element in an array.\n",
+        "#Write a python program to search an element in an array.(5)\n",
         "array=[11,22,33,44,55,66,77,88]\n",
         "search=44\n",
         "index=-1\n",
@@ -110,15 +168,27 @@
         "  print(\"Found at Index \"+str(index))"
       ],
       "metadata": {
-        "id": "Yh2CUn4tyZlm"
+        "id": "Yh2CUn4tyZlm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f0d04606-070d-4156-ce92-723ab40c2edd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found at Index 44\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to find second largest element in an array.\n",
+        "#Write a python program to find second largest element in an array.(6)\n",
         "array=[11,22,33,44,55,66,77,88]\n",
         "max=array[0]\n",
         "secondMax=array[0]\n",
@@ -137,9 +207,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2b1393a2-369b-40c3-d0aa-9c970d29eead"
+        "outputId": "b8c693f0-bdf5-4817-9a47-8870fe47c31e"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +223,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to count total number of even and odd elements in an array.\n",
+        "#Write a python program to count total number of even and odd elements in an array.(7)\n",
         "array=[11,22,33,44,55,66,77,88]\n",
         "odd=0;\n",
         "even=0;\n",
@@ -170,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pDt-n7FP2n8n",
-        "outputId": "1db62b25-ac5b-4e67-885e-0c41f306ec21"
+        "outputId": "908e573a-67be-437a-c36b-314acc514603"
       },
-      "execution_count": 22,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
