--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNPrPJ2Je3+sW1IIut9If8S",
+      "authorship_tag": "ABX9TyM/57Cdc71Xnqtg59hIghgK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 32,
       "metadata": {
         "id": "hUgdSG3wwlEX",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c107517-f50d-4660-e705-445a8af819b3"
+        "outputId": "da807439-8ca6-4f3d-8746-f0659d215a83"
       },
       "outputs": [
         {
@@ -75,9 +75,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "636db1db-f80b-41f5-989c-210296f39ea3"
+        "outputId": "9e5e2ff4-d769-4bf4-8c12-417ce6d6eb47"
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,9 +105,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "79996796-9df0-498b-fab9-94d07b537310"
+        "outputId": "6cf8d999-965b-4635-d571-08070717a55c"
       },
-      "execution_count": 25,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,9 +138,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ab9e9238-acb4-4e1d-8b5c-05d7bdcab8f7"
+        "outputId": "c70845dd-be61-44e1-920d-46b1f40f28b0"
       },
-      "execution_count": 26,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -172,9 +172,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0d04606-070d-4156-ce92-723ab40c2edd"
+        "outputId": "6d859b59-275b-47be-90d7-8b8614dbd9e1"
       },
-      "execution_count": 27,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,9 +207,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b8c693f0-bdf5-4817-9a47-8870fe47c31e"
+        "outputId": "16db3162-7755-4e40-8bc7-a80db19295d0"
       },
-      "execution_count": 28,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -240,9 +240,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pDt-n7FP2n8n",
-        "outputId": "908e573a-67be-437a-c36b-314acc514603"
+        "outputId": "243f42b6-d9de-4ddc-acc2-5ad25e3ad07b"
       },
-      "execution_count": 29,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,6 +250,156 @@
           "text": [
             "Odd Count 4\n",
             "Even Count 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to copy all elements from an array to another array. (8)\n",
+        "array=[11,22,33,44,55,66,77,88,99]\n",
+        "count=0\n",
+        "\n",
+        "for i in array:\n",
+        "  count=count+1\n",
+        "\n",
+        "copyArray=[None]*count\n",
+        "\n",
+        "for i in range(0,count-1):\n",
+        "  copyArray[i]=array[i]\n",
+        "\n",
+        "for i in copyArray:\n",
+        "  print(i)"
+      ],
+      "metadata": {
+        "id": "aPTKZ6zbiOOI",
+        "outputId": "15754e20-54c6-426e-aed7-540880fc2c8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "11\n",
+            "22\n",
+            "33\n",
+            "44\n",
+            "55\n",
+            "66\n",
+            "77\n",
+            "88\n",
+            "None\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to insert an element in an array. (9)\n",
+        "value=44\n",
+        "position=3\n",
+        "array=[11,22,33,55,66,77,88,99,None,None]\n",
+        "count=0\n",
+        "for i in array:\n",
+        "  if(i==None):\n",
+        "    break\n",
+        "  count=count+1\n",
+        "j=count-1\n",
+        "while(j>=position):\n",
+        "  array[j+1]=array[j]\n",
+        "  j=j-1\n",
+        "array[position]=value\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "id": "3F1SeWITjJfX",
+        "outputId": "e0e8bd8a-f8b0-4556-b99e-30bef8c5a41f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[11, 22, 33, 44, 55, 66, 77, 88, 99, None]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to delete an element from an array at specified position. (10)\n",
+        "position=3\n",
+        "array=[11,22,33,44,55,66,77,88,99]\n",
+        "for i in range(position,len(array)-1):\n",
+        "  array[i]=array[i+1]\n",
+        "\n",
+        "array[len(array)-1]=None\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "id": "te2U24wFuUsE",
+        "outputId": "7a1003dc-35f7-4012-ebe0-3ed072d64b19",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[11, 22, 33, 55, 66, 77, 88, 99, None]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to count frequency of each element in an array. (11)\n",
+        "array=[1,2,3,1,4,9,6,7,4,3,5,2,5,7,9]\n",
+        "frequency=[0,0,0,0,0,0,0,0,0,0]\n",
+        "for i in range(0,len(array)):\n",
+        "  frequency[array[i]]=frequency[array[i]]+1\n",
+        "\n",
+        "for i in range(0,len(frequency)):\n",
+        "  print(str(i)+ \" is presented \"+str(frequency[i])+\" Times\")"
+      ],
+      "metadata": {
+        "id": "DvO49L2rsg_e",
+        "outputId": "f922f052-2158-4b79-b461-f0ab9fa1c2da",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 is presented 0 Times\n",
+            "1 is presented 2 Times\n",
+            "2 is presented 2 Times\n",
+            "3 is presented 2 Times\n",
+            "4 is presented 2 Times\n",
+            "5 is presented 2 Times\n",
+            "6 is presented 1 Times\n",
+            "7 is presented 2 Times\n",
+            "8 is presented 0 Times\n",
+            "9 is presented 2 Times\n"
           ]
         }
       ]
