--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM/57Cdc71Xnqtg59hIghgK",
+      "authorship_tag": "ABX9TyNes2z31Jw+BICDRhXLlz1H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -400,6 +400,45 @@
             "7 is presented 2 Times\n",
             "8 is presented 0 Times\n",
             "9 is presented 2 Times\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to print all unique elements in the array.(12)\n",
+        "array=[1,2,3,1,4,9,6,11,7,4,3,11,5,2,5,7,9]\n",
+        "for i in range(0,len(array)):\n",
+        "  flag=True\n",
+        "  for j in range(i+1,len(array)):\n",
+        "    if(array[i]==array[j]):\n",
+        "      flag=False\n",
+        "  if(flag==True):\n",
+        "    print(array[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YS72F7HztVT3",
+        "outputId": "6688daa8-e514-46a6-f69e-2c7e119f781b"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "6\n",
+            "4\n",
+            "3\n",
+            "11\n",
+            "2\n",
+            "5\n",
+            "7\n",
+            "9\n"
           ]
         }
       ]
