--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNes2z31Jw+BICDRhXLlz1H",
+      "authorship_tag": "ABX9TyPCtxnanFJ7387pK/uJcLst",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -439,6 +439,80 @@
             "5\n",
             "7\n",
             "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a Python program to count total number of duplicate elements in an array.(13)\n",
+        "array=[1,2,3,1,4,9,6,11,7,4,3,11,5,2,5,7,9]\n",
+        "count=0\n",
+        "for i in range(0,len(array)):\n",
+        "  flag=True\n",
+        "  for j in range(i+1,len(array)):\n",
+        "    if(array[i]==array[j]):\n",
+        "      count=count+1\n",
+        "print(\"Total Number of Duplicate Number : \"+str(count));"
+      ],
+      "metadata": {
+        "id": "x3-rfBSzuf9N",
+        "outputId": "533b82fb-4e91-4b92-c0a4-7ace93c4c231",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total Number of Duplicate Number : 8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a Python program to delete all duplicate elements from an array.(14)\n",
+        "array=[1,2,3,1,4,9,6,11,7,4,3,11,5,2,5,7,9]\n",
+        "count=0\n",
+        "for i in range(0,len(array)):\n",
+        "  flag=True\n",
+        "  for j in range(i+1,len(array)):\n",
+        "    if(array[i]==array[j]):\n",
+        "      flag=False\n",
+        "  if(flag==True):\n",
+        "    count=count+1\n",
+        "newArray=[None] * count\n",
+        "c=0\n",
+        "for i in range(0,len(array)):\n",
+        "  flag=True\n",
+        "  for j in range(i+1,len(array)):\n",
+        "    if(array[i]==array[j]):\n",
+        "      flag=False\n",
+        "  if(flag==True):\n",
+        "    newArray[c]=array[i]\n",
+        "    c=c+1\n",
+        "print(newArray)\n"
+      ],
+      "metadata": {
+        "id": "LksrWCPnvF42",
+        "outputId": "4ad4810d-0358-485c-e0a9-ac89376b79b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 6, 4, 3, 11, 2, 5, 7, 9]\n"
           ]
         }
       ]
