--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPCtxnanFJ7387pK/uJcLst",
+      "authorship_tag": "ABX9TyMHV0+P3Ee4C3vJXNkNrSkr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -457,11 +457,11 @@
         "print(\"Total Number of Duplicate Number : \"+str(count));"
       ],
       "metadata": {
-        "id": "x3-rfBSzuf9N",
-        "outputId": "533b82fb-4e91-4b92-c0a4-7ace93c4c231",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "x3-rfBSzuf9N",
+        "outputId": "533b82fb-4e91-4b92-c0a4-7ace93c4c231"
       },
       "execution_count": 6,
       "outputs": [
@@ -500,11 +500,11 @@
         "print(newArray)\n"
       ],
       "metadata": {
-        "id": "LksrWCPnvF42",
-        "outputId": "4ad4810d-0358-485c-e0a9-ac89376b79b5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LksrWCPnvF42",
+        "outputId": "4ad4810d-0358-485c-e0a9-ac89376b79b5"
       },
       "execution_count": 7,
       "outputs": [
@@ -513,6 +513,42 @@
           "name": "stdout",
           "text": [
             "[1, 6, 4, 3, 11, 2, 5, 7, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to merge two array to third array.(15)\n",
+        "arrayOne=[1,2,3,4,5]\n",
+        "arrayTwo=[6,7,8,9,10]\n",
+        "size=len(arrayOne)+len(arrayTwo);\n",
+        "newArray=[None]*size\n",
+        "for i in range(0,len(arrayOne)):\n",
+        "  newArray[i]=arrayOne[i];\n",
+        "\n",
+        "x=len(arrayOne)\n",
+        "for i in range(0,len(arrayTwo)):\n",
+        "  newArray[x]=arrayTwo[i]\n",
+        "  x=x+1\n",
+        "\n",
+        "print(newArray)\n"
+      ],
+      "metadata": {
+        "id": "-1pB_MJ3wYA4",
+        "outputId": "ab812e73-53cc-454d-fb90-f032edd90690",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
           ]
         }
       ]
