--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM+mqsEvogXNpDoew5ukqSA",
+      "authorship_tag": "ABX9TyNl9I0uutW0YfnKHMPrQmZy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -547,6 +547,117 @@
           "name": "stdout",
           "text": [
             "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to find reverse of an array.\n",
+        "array=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "for i in range(len(array)-1,-1,-1):\n",
+        "  print(array[i])"
+      ],
+      "metadata": {
+        "id": "Jf5Iri4No3Cp",
+        "outputId": "5c742593-e5f2-4d1c-ff0f-d283e9152d2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a C program to put even and odd elements of array in two separate array.\n",
+        "array=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "oc=0\n",
+        "ec=0\n",
+        "for i in array:\n",
+        "  if(i%2==0):\n",
+        "    ec=ec+1\n",
+        "  else:\n",
+        "    oc=oc+1\n",
+        "olist=[None]*oc\n",
+        "elist=[None]*ec\n",
+        "e=0\n",
+        "o=0\n",
+        "for i in range(0,len(array)):\n",
+        "  if(i%2==0):\n",
+        "    elist[e]=array[i]\n",
+        "    e=e+1\n",
+        "  else:\n",
+        "    olist[o]=array[i]\n",
+        "    o=o+1\n",
+        "print(olist)\n",
+        "print(elist)"
+      ],
+      "metadata": {
+        "id": "w62FI8rjpKN9",
+        "outputId": "aaf93d4f-4151-44ce-d8f0-83dbb146f60b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n",
+            "[1, 3, 5, 7, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Write a python program to sort array elements in ascending or descending order.\n",
+        "array=[1,2,3,1,4,9,6,11,7,4,3,11,5,2,5,7,9]\n",
+        "for i in range(0,len(array)):\n",
+        "  for j in range(i+1,len(array)):\n",
+        "    if(array[i]>array[j]):\n",
+        "      temp=array[i]\n",
+        "      array[i]=array[j]\n",
+        "      array[j]=temp\n",
+        "print(array)"
+      ],
+      "metadata": {
+        "id": "khctR2mHr6rj",
+        "outputId": "6d98a2c7-d8b8-43c2-a3bc-aac85c31d748",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 7, 7, 9, 9, 11, 11]\n"
           ]
         }
       ]
