--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNl9I0uutW0YfnKHMPrQmZy",
+      "authorship_tag": "ABX9TyMkl62S6d4wirAJBhAAaQde",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -554,7 +554,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to find reverse of an array.\n",
+        "#Write a python program to find reverse of an array.(16)\n",
         "array=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
         "for i in range(len(array)-1,-1,-1):\n",
         "  print(array[i])"
@@ -566,7 +566,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +589,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write a C program to put even and odd elements of array in two separate array.\n",
+        "#Write a C program to put even and odd elements of array in two separate array.(17)\n",
         "array=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
         "oc=0\n",
         "ec=0\n",
@@ -619,7 +619,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -634,7 +634,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Write a python program to sort array elements in ascending or descending order.\n",
+        "#Write a python program to sort array elements in ascending or descending order.(18)\n",
         "array=[1,2,3,1,4,9,6,11,7,4,3,11,5,2,5,7,9]\n",
         "for i in range(0,len(array)):\n",
         "  for j in range(i+1,len(array)):\n",
@@ -651,7 +651,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -661,6 +661,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "w4D2mJ-pkhPX"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
