--- a/arrays_problem_solving_in_python.ipynb
+++ b/arrays_problem_solving_in_python.ipynb
@@ -6,7 +6,7 @@
       "name": "arrays-problem-solving-in-python.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMkl62S6d4wirAJBhAAaQde",
+      "authorship_tag": "ABX9TyNc7cie2Ld2UAMmgCGbdboh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -665,10 +665,65 @@
     {
       "cell_type": "code",
       "source": [
+        "#Write a python program to sort even and odd elements of array separately.(20)\n",
+        "def sort_array(array):\n",
+        "  for i in range(0,len(array)):\n",
+        "    for j in range(i+1,len(array)):\n",
+        "      if(array[i]>array[j]):\n",
+        "        temp=array[i]\n",
+        "        array[i]=array[j]\n",
+        "        array[j]=temp\n",
+        "\n",
+        "array=[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+        "oc=0\n",
+        "ec=0\n",
+        "for i in array:\n",
+        "  if(i%2==0):\n",
+        "    ec=ec+1\n",
+        "  else:\n",
+        "    oc=oc+1\n",
+        "olist=[None]*oc\n",
+        "elist=[None]*ec\n",
+        "e=0\n",
+        "o=0\n",
+        "for i in range(0,len(array)):\n",
+        "  if(i%2==0):\n",
+        "    elist[e]=array[i]\n",
+        "    e=e+1\n",
+        "  else:\n",
+        "    olist[o]=array[i]\n",
+        "    o=o+1\n",
+        "sort_array(olist)\n",
+        "sort_array(elist)\n",
+        "print(olist)\n",
+        "print(elist)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w4D2mJ-pkhPX",
+        "outputId": "74011fe9-5257-476a-d99b-60f0ea61e9d6"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2, 4, 6, 8, 10]\n",
+            "[1, 3, 5, 7, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "w4D2mJ-pkhPX"
+        "id": "IczBVIxcuG89"
       },
       "execution_count": null,
       "outputs": []
